<resources>
    <string name="app_name">SpendTrackr</string>
    <string name="summary_header">Summary: %1$s</string>
    <string name="total_spends_text">Total Spends: ₹%1$.2f</string>
    <string name="total_transactions_text">Total Transactions: %1$d</string>
    <string name="not_categorizedWarning_text">\n⚠️ %1$d transaction(s) uncategorized.</string>
    <string name="no_transaction_or_sheet_Warning">\n⚠️ No transaction found for %1$s. </string>

    <string name="summary_header_placeholder">Summary</string>
    <string name="total_spends_text_placeholder">Total Spends: …</string>
    <string name="total_transactions_text_placeholder">Total Transactions: …</string>

    <string name="api_url_editor_placeholder">API Base URL</string>
    <string name="api_key_editor_placeholder">API Key</string>

    <string name="save_and_check_api_button_text">Save and Check API</string>

    <!--Server health check strings-->
    <string name="server_status_unknown">Server Status: ⚠️ Unknown</string>
    <string name="server_status_checking">Server Status: ⏳ Checking…</string>
    <string name="server_status_healthy">Server Status: 🟢 Healthy</string>
    <string name="server_status_error">Server Status: 🔴 Internal Server Error</string>
    <string name="server_status_unhealthy">Server Status: 🔴 Not Reachable</string>

    <!--Auth check strings-->
    <string name="auth_status_unknown">Auth Status: ⚠️ Unknown</string>
    <string name="auth_status_checking">Auth Status: ⏳ Checking…</string>
    <string name="auth_status_okay">Auth Status: ✅ 200 Okay</string>
    <string name="auth_status_bad">Auth Status: 🚫 403 Forbidden</string>

    <!-- Bottom Nav and Header-->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_transactions">Transactions</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="settings_header">Settings</string>

    <string name="stats_header_category">Category</string>
    <string name="stats_header_amount">Amount</string>
    <string name="stats_header_count">Count</string>
    <string name="stats_item_amount">₹%.2f</string>

    <!-- Transaction Fragment -->
    <string name="transaction_default_date_placeholder">Date: …</string>
    <string name="transaction_total_amount_placeholder">Total: …</string>
    <string name="transaction_total_by_me_placeholder">My Spend: …</string>
    <string name="transaction_total_by_friend_placeholder">Friend Split: …</string>

    <string name="transaction_default_date">Date: %1$s</string>
    <string name="transaction_total_amount">Total: ₹%.2f</string>
    <string name="transaction_total_by_me">My Spend: ₹%.2f</string>
    <string name="transaction_total_by_friend">Friend Split: ₹%.2f</string>

    <!-- Transaction Item -->
    <string name="transaction_item_description">Description</string>
    <string name="transaction_item_category">Category</string>
    <string name="transaction_item_amount">₹0.00</string>
    <string name="transaction_item_friend_split">Friend: ₹0.00</string>
    <string name="transaction_item_amount_borne">Me: ₹0.00</string>
    <string name="transaction_item_notes">Notes</string>

    <!-- Edit Dialog Box -->
    <string name="edit_dialog_amount">Amount (₹)</string>
    <string name="edit_dialog_category">Category</string>
    <string name="edit_dialog_friend_split">Split (₹)</string>
    <string name="edit_dialog_my_share">My Share</string>
    <string name="edit_dialog_friend_share">Friend Share</string>
    <string name="edit_dialog_50_50">50:50</string>
    <string name="edit_dialog_clear_split">Clear</string>
    <string name="edit_dialog_notes">Notes (optional)</string>
    <string name="edit_dialog_delete_button">Delete</string>
    <string name="edit_dialog_cancel_button">Cancel</string>
    <string name="edit_dialog_save_button">Save</string>
    <string name="edit_dialog_full_split">Full</string>
    <string name="open_excel_worksheet_button_text">Open Excel Worksheet</string>
    <string name="show_success_notifications_toggle_text">Show successful SMS Log notifications</string>
    <string name="show_failure_notifications_toggle_text">Show failed SMS Log notifications</string>
    <string name="show_error_notifications_toggle_text">Show error SMS Log notifications</string>
    <string name="edit_dialog_transaction_method_text">Method</string>
    <string name="edit_dialog_account_number_text">Acc/Card Num</string>
    <string name="filter_card">Filter</string>
    <string name="month_year_picker_month_text">Month</string>
    <string name="month_year_picker_year_text">Year</string>
    <string name="filter_text_filter_all">Filter (All)</string>
    <string name="filter_text_n">Filter (%d)</string>

</resources>