<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_dialog_amount">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAmount"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryDropdownLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_dialog_category"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:paddingTop="12dp"
        app:endIconDrawable="@drawable/ic_drop_down">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/categoryDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/white"
            android:dropDownHeight="300dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_dialog_friend_split"
        app:placeholderText="0">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFriendSplit"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 50:50 + Clear + Full -->
    <LinearLayout
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fiftyFiftyButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_dialog_50_50" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_dialog_clear_split"
            android:layout_marginStart="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fullSplitButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_dialog_full_split"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Dropdown Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Method"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            app:endIconDrawable="@drawable/ic_drop_down">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/transactionMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColor="@color/white"
                android:dropDownHeight="105dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 4-Digit Entry Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:hint="Acc/Card Num"
            app:placeholderText="1234">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/transactionAccountNumber"
                android:inputType="number"
                android:maxLength="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_dialog_notes">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNotes"
            android:inputType="textCapSentences"
            android:maxLength="255"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Bottom Buttons -->
    <LinearLayout
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_dialog_delete_button"
            android:backgroundTint="@color/md_theme_error"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp" /> <!-- margin on the right -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_dialog_cancel_button"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/edit_dialog_save_button" />

    </LinearLayout>

</LinearLayout>
