<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/monthYearSelectorCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:strokeColor="@color/md_theme_onPrimaryContainer"
            app:strokeWidth="1dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/summaryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/summary_header_placeholder"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/md_theme_onPrimary"
                android:drawableEnd="@drawable/ic_calendar_month"
                android:drawablePadding="8dp" />
        </com.google.android.material.card.MaterialCardView>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
            android:padding="16dp"
            android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/filterCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:strokeColor="@color/md_theme_onSecondaryContainer"
                app:strokeWidth="1dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/filterText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/filter_card"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="@color/md_theme_onPrimary"
                    android:drawableEnd="@drawable/ic_filter_icon"
                    android:drawablePadding="8dp" />
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/notCategorizedWarningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/yellow"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:visibility="gone" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noTransactionsWarningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/yellow"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:visibility="gone" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/amountPieChart"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/totalSpendsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_spends_text_placeholder"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/countPieChart"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/totalTransactionsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_transactions_text_placeholder"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Category Table RecyclerView -->
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="72dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/summaryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
